--- a/resources/assets/sass/images.scss
+++ b/resources/assets/sass/images.scss
@@ -1,9 +1,9 @@
 .sidekick-image {
-	margin-bottom: 1rem;
+	margin-bottom: 1.3rem;
 }
 
 .customization-image {
-	margin: 1rem auto 1.5rem auto;
+	margin: 1rem auto 1.8rem auto;
 	display: block;
 }
 
