--- a/resources/assets/sass/text.scss
+++ b/resources/assets/sass/text.scss
@@ -30,7 +30,6 @@ section > h2, article > h2 {
 	font-size: 1.953em;
 	letter-spacing: -0.04em;
 	line-height: 1.1;
-	margin-top: .8rem;
 	margin-bottom: .8rem;
 }
 
